Made big alignment changes for desktop, added images and a few other features. Still working on some desktop bugs and then on to mobile adjustments.

--- a/static/css/links-page.css
+++ b/static/css/links-page.css
@@ -7,7 +7,7 @@
 
 :root {
     --main-orange: #EFB071;
-    --contrast-blue: #486d76;
+    --contrast-blue: #14213d;
 }
 
 /* Body Styling */
